--- a/.github/workflows/composite/dotnet-build/action.yml
+++ b/.github/workflows/composite/dotnet-build/action.yml
@@ -28,9 +28,9 @@ runs:
           ${{ runner.os }}-nuget-
 
     - name: Set up .NET SDK
-      uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 6.x.x
+        dotnet-version: 6.0.x
 
     - name: Restores dependencies
       shell: bash
