--- a/.github/workflows/code-style-check.yml
+++ b/.github/workflows/code-style-check.yml
@@ -28,6 +28,9 @@ jobs:
     name: Check .NET solution code style
     runs-on: ubuntu-latest
 
+    env:
+      DOTNET_CLI_TELEMETRY_OPTOUT: true
+
     steps:
       - name: Set up .NET SDK
         uses: actions/setup-dotnet@v3
