--- a/.github/workflows/dotnet-security-scan.yml
+++ b/.github/workflows/dotnet-security-scan.yml
@@ -16,6 +16,9 @@ jobs:
     name: Security scan
     runs-on: ubuntu-latest
 
+    env:
+      DOTNET_CLI_TELEMETRY_OPTOUT: true
+
     permissions:
       contents: read
 
