--- a/.github/workflows/dotnet-security-scan.yml
+++ b/.github/workflows/dotnet-security-scan.yml
@@ -47,6 +47,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Restores dependencies
+        env:
+          DOTNET_NUGET_SIGNATURE_VERIFICATION: true
         run: dotnet restore --locked-mode
 
       - name: Run NuGet security check
