--- a/test/Aktabook.Bus.UnitTest/Aktabook.Bus.UnitTest.csproj
+++ b/test/Aktabook.Bus.UnitTest/Aktabook.Bus.UnitTest.csproj
@@ -9,6 +9,10 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.9.0"/>
+    <PackageReference Include="FluentAssertions.Analyzers" Version="0.17.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1"/>
     <PackageReference Include="Moq" Version="4.18.4"/>
     <PackageReference Include="NServiceBus.Testing" Version="8.0.1"/>
