chore: Revise default appsettings files

--- a/src/Aktabook.Bus/appsettings.Example.json
+++ b/src/Aktabook.Bus/appsettings.Example.json
@@ -13,6 +13,13 @@
     },
     "WriteTo": [
       {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {SourceContext} [{Level}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
         "Name": "File",
         "Args": {
           "path": "Logs/aktabook-bus-.log",
@@ -54,6 +61,28 @@
       "Application": "Aktabook"
     }
   },
+  "AllowedHosts": "*",
+  "RequesterServiceBus": {
+    "RabbitMQConnectionOptions": {
+      "HostName": "",
+      "Password": "",
+      "PortNumber": 5672,
+      "UserName": "",
+      "VirtualHost": ""
+    }
+  },
+  "RequesterServiceDbContext": {
+    "SqlServerConfig": {
+      "DataSource": "",
+      "TrustServerCertificate": false,
+      "InitialCatalog": "",
+      "UserID": "",
+      "Password": ""
+    }
+  },
+  "OpenLibraryClientOptions": {
+    "Host": "https://openlibrary.org"
+  },
   "ReadinessListenerOptions": {
     "Name": "Readiness Endpoint",
     "Tags": [
@@ -72,12 +101,11 @@
     "Port": 23515,
     "Interval": "00:00:03"
   },
-  "RequesterServiceDbContext": {
-    "SqlServerConfig": {
-    }
+  "ProcessIdFileHostedServiceOptions": {
+    "FileName": "aktabook-bus.pid"
   },
-  "RequesterServiceBus": {
-    "RabbitMQConnectionOptions": {
-    }
+  "TelemetryOptions": {
+    "ServiceName": "Aktabook.Bus",
+    "ServiceVersion": "1.0.0"
   }
 }
