--- a/src/Aktabook.PublicApi.V1/appsettings.Example.json
+++ b/src/Aktabook.PublicApi.V1/appsettings.Example.json
@@ -62,9 +62,19 @@
     }
   },
   "AllowedHosts": "*",
+  "RequesterServiceBus": {
+    "RabbitMQConnectionOptions": {
+      "HostName": "",
+      "Password": "",
+      "PortNumber": 5672,
+      "UserName": "",
+      "VirtualHost": ""
+    }
+  },
   "RequesterServiceDbContext": {
     "SqlServerConfig": {
       "DataSource": "",
+      "TrustServerCertificate": false,
       "InitialCatalog": "",
       "UserID": "",
       "Password": ""
