--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
     <EnablePackageValidation>true</EnablePackageValidation>
+    <RuntimeIdentifiers>osx-arm64;osx-x64;ubuntu.22.04-x64;win-x64</RuntimeIdentifiers>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <NoWarn>CA1014</NoWarn>
   </PropertyGroup>
