--- a/src/Aktabook.Bus/Aktabook.Bus.csproj
+++ b/src/Aktabook.Bus/Aktabook.Bus.csproj
@@ -21,10 +21,10 @@
     <PackageReference Include="NServiceBus.Metrics.PerformanceCounters" Version="5.0.0"/>
     <PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.1"/>
     <PackageReference Include="NServiceBus.Serilog" Version="9.0.1"/>
-    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0-beta.1"/>
-    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.4.0-beta.1"/>
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.7"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.7"/>
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0"/>
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.4.0"/>
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.4.0"/>
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.14"/>
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0"/>
     <PackageReference Include="Serilog" Version="2.12.0"/>
     <PackageReference Include="Serilog.Exceptions" Version="8.4.0"/>
