--- a/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
+++ b/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.1"/>
     <PackageReference Include="MediatR" Version="12.0.1"/>
-    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0"/>
+    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0-beta.3"/>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.14"/>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
