build: Enable all .NET source code analyzers

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,6 @@
 <Project>
   <PropertyGroup>
+    <AnalysisMode>All</AnalysisMode>
     <EnablePackageValidation>true</EnablePackageValidation>
     <RuntimeIdentifiers>osx-arm64;osx-x64;ubuntu.22.04-x64;win-x64</RuntimeIdentifiers>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
