--- a/test/Aktabook.Bus.IntegrationTest/Aktabook.Bus.IntegrationTest.csproj
+++ b/test/Aktabook.Bus.IntegrationTest/Aktabook.Bus.IntegrationTest.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.1"/>
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0"/>
     <PackageReference Include="xunit" Version="2.4.2"/>
+    <PackageReference Include="xunit.analyzers" Version="1.1.0"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
