--- a/test/Aktabook.Bus.UnitTest/Aktabook.Bus.UnitTest.csproj
+++ b/test/Aktabook.Bus.UnitTest/Aktabook.Bus.UnitTest.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Moq" Version="4.18.4"/>
     <PackageReference Include="NServiceBus.Testing" Version="8.0.1"/>
     <PackageReference Include="xunit" Version="2.4.2"/>
+    <PackageReference Include="xunit.analyzers" Version="1.1.0"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
