--- a/test/Aktabook.Bus.UnitTest/Aktabook.Bus.UnitTest.csproj
+++ b/test/Aktabook.Bus.UnitTest/Aktabook.Bus.UnitTest.csproj
@@ -14,8 +14,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3"/>
-    <PackageReference Include="Moq" Version="4.18.4"/>
     <PackageReference Include="NServiceBus.Testing" Version="8.0.1"/>
+    <PackageReference Include="NSubstitute" Version="5.0.0" />
+    <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.16">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="xunit" Version="2.5.0"/>
     <PackageReference Include="xunit.analyzers" Version="1.2.0"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.0">
