--- a/src/Aktabook.Bus/Aktabook.Bus.csproj
+++ b/src/Aktabook.Bus/Aktabook.Bus.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Aktabook.Bus.Common\Aktabook.Bus.Common.csproj"/>
+    <ProjectReference Include="..\Aktabook.Infrastructure.BusInfra\Aktabook.Infrastructure.BusInfra.csproj" />
     <ProjectReference Include="..\Aktabook.Connectors.OpenLibrary\Aktabook.Connectors.OpenLibrary.csproj"/>
     <ProjectReference Include="..\Aktabook.Data\Aktabook.Data.csproj"/>
     <ProjectReference Include="..\Aktabook.Diagnostics.HealthChecks\Aktabook.Diagnostics.HealthChecks.csproj"/>
