--- a/test/Aktabook.Bus.IntegrationTest/Aktabook.Bus.IntegrationTest.csproj
+++ b/test/Aktabook.Bus.IntegrationTest/Aktabook.Bus.IntegrationTest.csproj
@@ -30,7 +30,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Aktabook.Application\Aktabook.Application.csproj"/>
-    <ProjectReference Include="..\..\src\Aktabook.Bus.Common\Aktabook.Bus.Common.csproj"/>
+    <ProjectReference Include="..\..\src\Aktabook.Infrastructure.BusInfra\Aktabook.Infrastructure.BusInfra.csproj" />
     <ProjectReference Include="..\..\src\Aktabook.Infrastructure.Configuration\Aktabook.Infrastructure.Configuration.csproj"/>
     <ProjectReference Include="..\Aktabook.Data.Testing\Aktabook.Data.Testing.csproj"/>
   </ItemGroup>
