--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -499,7 +499,7 @@ jobs:
           /o:'oboukli'
           /d:'sonar.host.url=https://sonarcloud.io'
           /d:'sonar.sourceEncoding=UTF-8'
-          /d:'sonar.login=${{ secrets.SONAR_TOKEN }}'
+          /d:'sonar.token=${{ secrets.SONAR_TOKEN }}'
           /d:'sonar.cs.vscoveragexml.reportsPaths=merged.xml'
 
           dotnet build
@@ -507,4 +507,4 @@ jobs:
           --no-restore
 
           dotnet sonarscanner end
-          /d:'sonar.login=${{ secrets.SONAR_TOKEN }}'
+          /d:'sonar.token=${{ secrets.SONAR_TOKEN }}'
