--- a/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
+++ b/src/Aktabook.PublicApi.V1/Aktabook.PublicApi.V1.csproj
@@ -10,9 +10,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.1"/>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.0"/>
     <PackageReference Include="MediatR" Version="12.2.0"/>
-    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0-beta.3"/>
+    <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="6.0.0"/>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.25"/>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1"/>
