ci(GitHub Actions): Revisit CI configuration

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -10,9 +10,15 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - src/**
+      - test/**
   push:
     branches:
       - main
+    paths:
+      - src/**
+      - test/**
   workflow_dispatch:
 
 permissions: {}
