--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,4 +32,4 @@ jobs:
           persist-credentials: false
 
       - name: Run markdownlint
-        run: markdownlint .
+        run: markdownlint `.`
