--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,14 +12,14 @@ trigger:
     include:
     - src/
     - test/
-  pr:
-    branches:
-      include:
-      - main
-    paths:
-      include:
-      - src/
-      - test/
+pr:
+  branches:
+    include:
+    - main
+  paths:
+    include:
+    - src/
+    - test/
 
 strategy:
   matrix:
@@ -39,7 +39,8 @@ variables:
 steps:
   - task: UseDotNet@2
     displayName: Use .NET
-    useGlobalJson: true
+    inputs:
+      useGlobalJson: true
 
   - task: DotNetCoreCLI@2
     displayName: Build
