--- a/.github/workflows/code-style-check.yml
+++ b/.github/workflows/code-style-check.yml
@@ -29,12 +29,18 @@ jobs:
 
     env:
       DOTNET_CLI_TELEMETRY_OPTOUT: true
+      DOTNET_NUGET_SIGNATURE_VERIFICATION: true
+      NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
 
     steps:
       - name: Set up .NET SDK
-        uses: actions/setup-dotnet@v3
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 6.0.x
+          cache: true
+          cache-dependency-path: |-
+            src/**/packages.lock.json
+            test/**/packages.lock.json
+          global-json-file: global.json
 
       - name: Check out repository
         uses: actions/checkout@v4
