--- a/.github/workflows/composite/dotnet-build/action.yml
+++ b/.github/workflows/composite/dotnet-build/action.yml
@@ -7,6 +7,10 @@
 name: Build
 description: Build .NET solution and cache restored NuGet packages
 
+env:
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
+  DOTNET_NUGET_SIGNATURE_VERIFICATION: true
+
 inputs:
   configuration:
     description: .NET build configuration
@@ -16,7 +20,7 @@ runs:
   using: composite
   steps:
     - name: Cache NuGet packages
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: ~/.nuget/packages
         key: >-
@@ -28,13 +32,15 @@ runs:
           ${{ runner.os }}-nuget-
 
     - name: Set up .NET SDK
-      uses: actions/setup-dotnet@v3
+      uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 6.0.x
+        cache: true
+        cache-dependency-path: |-
+          src/**/packages.lock.json
+          test/**/packages.lock.json
+        global-json-file: global.json
 
     - name: Restores dependencies
-      env:
-        DOTNET_NUGET_SIGNATURE_VERIFICATION: "true"
       shell: bash
       run: dotnet restore --locked-mode
 
