--- a/src/Aktabook.Bus/Aktabook.Bus.csproj
+++ b/src/Aktabook.Bus/Aktabook.Bus.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -10,33 +10,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="6.0.2"/>
-    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="6.0.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.25"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.25"/>
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1"/>
+    <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="8.0.1"/>
+    <PackageReference Include="AspNetCore.HealthChecks.SqlServer" Version="8.0.2"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.6"/>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"/>
     <PackageReference Include="NServiceBus" Version="8.1.6"/>
     <PackageReference Include="NServiceBus.Extensions.Hosting" Version="2.0.0"/>
-    <PackageReference Include="NServiceBus.Metrics.PerformanceCounters" Version="5.0.0"/>
     <PackageReference Include="NServiceBus.RabbitMQ" Version="8.0.3"/>
-    <PackageReference Include="NServiceBus.Serilog" Version="9.2.0"/>
-    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.6.0"/>
-    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.6.0"/>
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.6.0"/>
-    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.14"/>
-    <PackageReference Include="RabbitMQ.Client" Version="6.6.0"/>
-    <PackageReference Include="Serilog" Version="2.12.0"/>
+    <PackageReference Include="NServiceBus.Serilog" Version="11.2.2"/>
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.8.1"/>
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.8.1"/>
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.8.1"/>
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.8.1"/>
+    <PackageReference Include="Serilog" Version="3.1.1"/>
     <PackageReference Include="Serilog.Exceptions" Version="8.4.0"/>
     <PackageReference Include="Serilog.Exceptions.EntityFrameworkCore" Version="8.4.0"/>
-    <PackageReference Include="Serilog.Extensions.Hosting" Version="5.0.1"/>
-    <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0"/>
-    <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0"/>
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0"/>
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0"/>
+    <PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0"/>
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0"/>
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1"/>
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Aktabook.Infrastructure.BusInfra\Aktabook.Infrastructure.BusInfra.csproj" />
+    <ProjectReference Include="..\Aktabook.Infrastructure.BusInfra\Aktabook.Infrastructure.BusInfra.csproj"/>
     <ProjectReference Include="..\Aktabook.Connectors.OpenLibrary\Aktabook.Connectors.OpenLibrary.csproj"/>
     <ProjectReference Include="..\Aktabook.Data\Aktabook.Data.csproj"/>
     <ProjectReference Include="..\Aktabook.Diagnostics.HealthChecks\Aktabook.Diagnostics.HealthChecks.csproj"/>
