--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -53,7 +53,9 @@ jobs:
     env:
       AKTABOOK_ENVIRONMENT: Test
       AKTABOOK_INTEGRATION_TEST_ENVIRONMENT: Test
-      BUS_HOST_PID_FILE: src/Aktabook.Bus/bin/Release/net6.0/aktabook-bus.pid
+      BUS_BIN_DIR: src/Aktabook.Bus/bin/Release/net8.0/
+      BUS_HOST_PID_FILE: src/Aktabook.Bus/bin/Release/net8.0/aktabook-bus.pid
+      BUS_LOGS_DIR: src/Aktabook.Bus/bin/Release/net8.0/Logs/
       RequesterServiceBus__RabbitMQConnectionOptions__HostName: localhost
       RequesterServiceBus__RabbitMQConnectionOptions__Password: ${{ secrets.RABBITMQ_INTEGRATION_TEST_PASSWORD }}
       RequesterServiceBus__RabbitMQConnectionOptions__PortNumber: 5672
@@ -240,7 +242,7 @@ jobs:
           --background
           coverage_session
           ./Aktabook.Bus
-        working-directory: src/Aktabook.Bus/bin/Release/net6.0/
+        working-directory: ${{ env.BUS_BIN_DIR }}
 
       - name: Wait for bus readiness check
         env:
@@ -339,7 +341,7 @@ jobs:
         with:
           if-no-files-found: error
           name: bus-logs
-          path: src/Aktabook.Bus/bin/Release/net6.0/Logs
+          path: ${{ env.BUS_LOGS_DIR }}
 
       - name: Upload public API logs
         if: ${{ always() }}
@@ -347,7 +349,7 @@ jobs:
         with:
           if-no-files-found: error
           name: public-api-logs
-          path: src/Aktabook.Bus/bin/Release/net6.0/Logs
+          path: ${{ env.BUS_LOGS_DIR }}
 
   unit_test:
     name: Unit test
