--- a/.github/workflows/dotnet-security-scan.yml
+++ b/.github/workflows/dotnet-security-scan.yml
@@ -42,6 +42,15 @@ jobs:
         with:
           persist-credentials: false
 
+      - name: Set up .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          cache: true
+          cache-dependency-path: |-
+            src/**/packages.lock.json
+            test/**/packages.lock.json
+          global-json-file: global.json
+
       - name: Install scanner
         run: >-
           dotnet tool install security-scan
@@ -63,6 +72,15 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+
+      - name: Set up .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          cache: true
+          cache-dependency-path: |-
+            src/**/packages.lock.json
+            test/**/packages.lock.json
+          global-json-file: global.json
 
       - name: Restores dependencies
         env:
