--- a/.github/workflows/resharper-inspectcode.yml
+++ b/.github/workflows/resharper-inspectcode.yml
@@ -49,4 +49,4 @@ jobs:
           mono:
           solution: ./Aktabook.sln
           telemetry-optout: True
-          tool-version: "2024.1.0-rc01"
+          tool-version: "2024.1.3"
